# openVideoServer

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md
3rdpart/include/mysql/: my_config.h
3rdpart/include/openssl/: bio.h  configuration.h  crypto.h  ssl.h
conf/: config.ini
docker/: readme.txt
package/rpm/: readme.txt
postman/: 127.0.0.1.postman_environment.json  ZLMediaKit.postman_collection.json
server/: CMakeLists.txt  System.cpp  System.h  WebApi.cpp  WebApi.h  WebHook.cpp  main.cpp
src/Common/: Stamp.cpp  Stamp.h  config.cpp  config.h  macros.h
src/Http/: HttpFileManager.cpp  HttpFileManager.h  HttpSession.cpp  HttpSession.h
src/Shell/: ShellCMD.h
tests/: test_httpApi.cpp
